k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-api
  namespace: manutencao-de-piscina
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: contact-api
  template:
    metadata:
      labels:
        app: contact-api
    spec:
      terminationGracePeriodSeconds: 60
      automountServiceAccountToken: false
      containers:
      - name: contact-api
        image: gru.ocir.io/grffsstogo8v/prod-contact-api:0.0.3
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 512m
            memory: 2048Mi
          requests:
            cpu: 128m
            memory: 256Mi
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
      imagePullSecrets:
      - name: docker-registry-ocir
